improved error handling and sentry integration

--- a/.env_copy
+++ b/.env_copy
@@ -20,3 +20,6 @@ REDIS_URL=redis://redis:6379/0
 # Celery settings
 CELERY_BROKER_URL=${REDIS_URL}
 CELERY_RESULT_BACKEND=${REDIS_URL}
+
+# sentry
+SENTRY_DSN=
