--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==5.3.1
 asgiref==3.8.1
 billiard==4.2.1
 celery==5.4.0
+certifi==2024.8.30
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -18,10 +19,12 @@ psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 redis==5.2.0
+sentry-sdk==2.19.0
 six==1.16.0
 sqlparse==0.5.2
 typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
 whitenoise==6.8.2
